<resources>
    <string name="app_name">LIQYD</string>
    <string name="address">Address</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="payment">PAYMENT</string>
    <string name="mobile_number">Mobile No</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="terms_conditions"><![CDATA[I have read and agree to the Terms & Conditions]]></string>
    <string name="registration">REGISTRATION</string>
    <string name="delivery_closed_message">Delivery Closed between 12:00 PM - 4 PM</string>
    <string name="address1">Address1</string>
    <string name="landmark">Landmark</string>
    <string name="pune">Pune</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="save_default_address">Save as a default address?</string>
    <string name="pay">PAY</string>

    <!--Navigation drawer menu labels-->
    <string name="nav_order_history">Order History</string>
    <string name="nav_terms_conditions">Terms &amp; Conditions</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="buy">BUY</string>
    <string name="order_details_deposit_message">Rs 150 will be charged for not returning empty can which is refundable.\nMinimum order - 2 Water cans</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="delivery_slots">Delivery Slots</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="total_price">Total Price</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change_address">Change Address</string>
    <string name="product_details">Product Details</string>
    <string name="price_details">Price Details</string>
    <string name="price_1_item">Price (1 item)</string>
    <string name="order_total">Order Total</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="promo_code">Promo Code</string>
    <string name="place_order">Place order</string>
    <string name="enter_promo_code">Enter Promo Code Here</string>
    <string name="rupees">Rs.</string>
    <string name="save">SAVE</string>
    <string name="order_placed_label">Order Placed:</string>
    <string name="product_name_label">Product name:</string>
    <string name="no_purchase_made_yet">No purchase made yet</string>

    <string-array name="delivery_areas">
        <item>Baner</item>
        <item>Aundh</item>
        <item>Wakad</item>
        <item>Pimple Saudagar</item>
        <item>Kharadi</item>
    </string-array>

    <string-array name="delivery_slots">
        <item>Baner</item>
        <item>Aundh</item>
        <item>Wakad</item>
        <item>Pimple Saudagar</item>
        <item>Kharadi</item>
    </string-array>

    <string-array name="delivery_types">
        <item>Normal</item>
        <item>Fast</item>
    </string-array>

    <string-array name="delivery_time">
        <item>Morning</item>
        <item>Noon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>

</resources>
