<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_top" />

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delivery_closed_message"
            android:textAppearance="?android:absListViewStyle"
            android:textColor="@color/appTheme"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:textColor="@color/appTheme" />

        <EditText
            android:id="@+id/et_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address1"
            android:textColor="@color/appTheme" />

        <EditText
            android:id="@+id/et_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/landmark"
            android:textColor="@color/appTheme" />

        <EditText
            android:id="@+id/et_pune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:text="@string/pune"
            android:textColor="@color/appTheme" />

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:text="@string/maharashtra"
            android:textColor="@color/appTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_default_address_checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/save_default_address"
                android:textColor="@color/appTheme"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/appTheme"
        android:text="@string/save"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:typeface="serif" />

</RelativeLayout>