<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/et_mobile_number"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/appTheme"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/appTheme"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/appTheme"
        android:text="@string/create_a_new_account"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:typeface="sans" />
</RelativeLayout>