<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/name"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_mobile"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/et_email_id"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_password"
        android:layout_alignStart="@id/et_password"
        android:layout_below="@id/et_password"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_terms_conditions"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:layout_marginLeft="20dp"
            android:maxLines="2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/appTheme"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/appTheme"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:typeface="serif" />



</RelativeLayout>