<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF3F4">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_top" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/delivery_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/delivery_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/delivery_address"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/et_delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@id/delivery_address_label" />

                <TextView
                    android:id="@+id/change_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_delivery_address"
                    android:layout_centerHorizontal="true"
                    android:text="@string/change_address"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/product_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/delivery_address_container"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/product_details_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/product_details"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/product_details_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:background="#c0c0c0" />

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/product_details_label"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/bottle" />

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="45dp"
                    android:layout_toRightOf="@id/product_image"
                    android:text="Bailey 20 Ltr"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_name"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/product_image"
                    android:text="Qty: "
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_name"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/quantity_label"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/price_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_details_container"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:paddingBottom="10dp">

                <!--horizontal line here-->

                <TextView
                    android:id="@+id/price_details_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/price_details"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/price_details_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="#c0c0c0" />


                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/price_1_item"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/price_one_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/price"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="70"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <!--price item 1 row ends-->

                <TextView
                    android:id="@+id/order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/price_one_item"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/order_total"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/order_total"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:text="140"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <!--order detail row ends-->

                <TextView
                    android:id="@+id/amount_payable_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/order_total"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/amount_payable"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/amount_payable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/amount_payable_label"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:text="140"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <!--Amount payable row ends-->
                <CheckBox
                    android:id="@+id/cb_promo_code"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/amount_payable_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/cb_promo_code"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@id/cb_promo_code"
                    android:maxLines="2"
                    android:text="@string/promo_code"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_promo_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_promo_code"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_promo_code"
                    android:visibility="gone" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/scrollView"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_amount_payable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="140"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="30sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/place_order_button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="@color/appTheme"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/place_order"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>